# wrtn-data-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/etl/: category.py  character.py
app/extract/: category.py
app/util/: database.py
data/: categories.csv  dump.sql  result.csv
